--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "lib": ["ES2020"],
-    "module": "ES2020",
+    "module": "commonjs",
     "moduleResolution": "node",
     "target": "ES2020",
-    "outDir": "build"
+    "outDir": "build",
+    "esModuleInterop": true
   }
 }
