--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,10 @@
     "start": "tsc && node build/server.js"
   },
   "dependencies": {
-    "express": "^4.17.2",
-    "typescript": "^4.5.4"
+    "express": "^4.17.2"
   },
   "devDependencies": {
+    "typescript": "^4.5.4",
     "@types/express": "^4.17.13"
   }
 }
