--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,17 @@
   "name": "server",
   "version": "0.0.0",
   "scripts": {
-    "start": "tsc && node build/server.js"
+    "dev": "nodemon server.ts",
+    "start": "node build/server.js",
+    "build": "tsc -p ."
   },
   "dependencies": {
     "express": "^4.17.2"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "@types/express": "^4.17.13"
+    "@types/express": "^4.17.13",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
