--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       target: base
     volumes:
       - ./server:/home/node/app/server/
-      - ./nodemon.json:/home/node/app/server/nodemon.json
+      - ./server/nodemon.json:/home/node/app/server/nodemon.json
     expose:
       - 8080
     ports:
