--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "@vitejs/plugin-react": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "@types/react-dom": "^17.0.10"
   }
 }
