--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,13 @@
     "build": "tsc -p ."
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "@types/node": "^17.0.8",
+    "express": "^4.17.2",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "ts-node": "^10.4.0"
   }
 }
