--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^1.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "@vitejs/plugin-react": "^1.0.7"
+    "vite": "^2.7.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10"
+    "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-plugin-react": "^7.28.0"
   }
 }
