--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "nodemon server.ts",
     "start": "node build/server.js",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@types/node": "^17.0.8",
@@ -13,6 +14,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0"
   }
