--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,20 +2,43 @@ name: "Build and deploy lydia-radgiver-frontend"
 on:
   push:
     branches:
-    - "main"
+    - main
+  pull_request:
+    branches:
+      - main
 env:
   "IMAGE": "ghcr.io/${{ github.repository }}:${{ github.sha }}"
 jobs:
   "build":
-    name: "build"
-    runs-on: "ubuntu-18.04"
+    name: "Build, lint and test"
+    runs-on: "ubuntu-latest"
     steps:
     - uses: "actions/checkout@v2"
-    - uses: "actions/setup-node@v1"
-    # - name: "install dependencies"
-    #   run: "npm ci"
-    # - name: "run tests"
-    #   run: "npm test"
+
+    - name: "Setup node"
+      uses: "actions/setup-node@v1"
+      with:
+        node_version: '16'
+
+    - name: "Install deps"
+      run: "yarn install --immutable"
+
+    - name: "Lint client"
+      uses: "wearerequired/lint-action@v1"
+      with:
+        eslint: true
+        eslint_dir: client/
+        eslint_extensions: js,jsx,ts,tsx
+
+    - name: "Lint server"
+      uses: "wearerequired/lint-action@v1"
+      with:
+        eslint: true
+        eslint_dir: server/
+        eslint_extensions: js,jsx,ts,tsx
+
+#    - name: "Run tests"
+#      run: "yarn test"
     # - name: "Login to GitHub Docker Registry"
     #   uses: "docker/login-action@v1"
     #   with:
@@ -27,7 +50,7 @@ jobs:
   # "deployAppToDev":
   #   name: "Deploy app to dev"
   #   needs: "build"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy to DEV"
@@ -40,7 +63,7 @@ jobs:
   # "deployAppToProd":
   #   name: "Deploy app to prod"
   #   needs: "deployAppToDev"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy to PROD"
@@ -53,7 +76,7 @@ jobs:
   # "deployAlertsToDev":
   #   name: "Deploy alerts to dev"
   #   needs: "build"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy alerts to DEV"
@@ -66,7 +89,7 @@ jobs:
   # "deployAlertsToProd":
   #   name: "Deploy alerts to prod"
   #   needs: "build"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy alerts to PROD"
