--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: "Setup node"
       uses: "actions/setup-node@v2"
       with:
-        node_version: '16'
+        node-version: '16'
 
     - name: "Install deps client"
       working-directory: client
