--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -8,29 +8,22 @@ metadata:
 spec:
   image: {{image}}
   liveness:
-    path: "/isalive"
+    path: "/internal/isAlive"
     port: 8080
     initialDelay: 20
     timeout: 60
   readiness:
-    path: "/isready"
+    path: "/internal/isReady"
     port: 8080
     initialDelay: 20
     timeout: 60
   replicas:
-    min: 2
-    max: 2
+    min: 1
+    max: 1
     cpuThresholdPercentage: 50
   prometheus:
     enabled: true
     path: "/metrics"
-  resources:
-    limits:
-      cpu: "200m"
-      memory: "256Mi"
-    requests:
-      cpu: "200"
-      memory: "256Mi"
   ingresses: 
   {{#each ingresses as |url|}}
     - {{url}}
