--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,45 +2,74 @@ name: "Build and deploy lydia-radgiver-frontend"
 on:
   push:
     branches:
-    - "main"
+      - main
+#  pull_request:
+#    branches:
+#      - main
 env:
   "IMAGE": "ghcr.io/${{ github.repository }}:${{ github.sha }}"
 jobs:
   "build":
-    name: "build"
-    runs-on: "ubuntu-18.04"
+    name: "Build, lint, test and push docker image"
+    runs-on: "ubuntu-latest"
     steps:
-    - uses: "actions/checkout@v2"
-    - uses: "actions/setup-node@v1"
-    # - name: "install dependencies"
-    #   run: "npm ci"
-    # - name: "run tests"
-    #   run: "npm test"
-    # - name: "Login to GitHub Docker Registry"
-    #   uses: "docker/login-action@v1"
-    #   with:
-    #     "registry": "ghcr.io"
-    #     "username": "${{ github.actor }}"
-    #     "password": "${{ secrets.GITHUB_TOKEN }}"
-    # - name: "Build and push the Docker image"
-    #   run: "docker build --pull --tag ${IMAGE} . && docker push ${IMAGE}"
-  # "deployAppToDev":
-  #   name: "Deploy app to dev"
-  #   needs: "build"
-  #   runs-on: "ubuntu-18.04"
-  #   steps:
-  #   - uses: "actions/checkout@v2"
-  #   - name: "Deploy to DEV"
-  #     uses: "nais/deploy/actions/deploy@v1"
-  #     env:
-  #       "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
-  #       "CLUSTER": "dev-gcp"
-  #       "RESOURCE": ".nais/nais.yaml"
-  #       "VARS": ".nais/dev.yaml"
+      - uses: "actions/checkout@v2"
+
+      - name: "Setup node"
+        uses: "actions/setup-node@v2"
+        with:
+          node-version: '16'
+
+      - name: "Install deps client"
+        working-directory: client
+        run: "yarn install --immutable"
+
+      - name: "Install deps server"
+        working-directory: server
+        run: "yarn install --immutable"
+
+      - name: "Lint client"
+        uses: "wearerequired/lint-action@v1"
+        with:
+          eslint: true
+          eslint_dir: client/
+          eslint_extensions: js,jsx,ts,tsx
+
+      #    - name: "Lint server"
+      #      uses: "wearerequired/lint-action@v1"
+      #      with:
+      #        eslint: true
+      #        eslint_dir: server/
+      #        eslint_extensions: js,ts
+
+      #    - name: "Run tests"
+      #      run: "yarn test"
+      - name: "Login to GitHub Docker Registry"
+        uses: "docker/login-action@v1"
+        with:
+          "registry": "ghcr.io"
+          "username": "${{ github.actor }}"
+          "password": "${{ secrets.GITHUB_TOKEN }}"
+      - name: "Build and push the Docker image"
+        run: "docker-compose build --pull . && docker push ${IMAGE}"
+
+  "deployAppToDev":
+    name: "Deploy app to dev"
+    needs: "build"
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: "actions/checkout@v2"
+      - name: "Deploy to DEV"
+        uses: "nais/deploy/actions/deploy@v1"
+        env:
+          "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
+          "CLUSTER": "dev-gcp"
+          "RESOURCE": ".nais/nais.yaml"
+          "VARS": ".nais/dev.yaml"
   # "deployAppToProd":
   #   name: "Deploy app to prod"
   #   needs: "deployAppToDev"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy to PROD"
@@ -53,7 +82,7 @@ jobs:
   # "deployAlertsToDev":
   #   name: "Deploy alerts to dev"
   #   needs: "build"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy alerts to DEV"
@@ -66,7 +95,7 @@ jobs:
   # "deployAlertsToProd":
   #   name: "Deploy alerts to prod"
   #   needs: "build"
-  #   runs-on: "ubuntu-18.04"
+  #   runs-on: "ubuntu-latest"
   #   steps:
   #   - uses: "actions/checkout@v2"
   #   - name: "Deploy alerts to PROD"
