--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,19 +66,19 @@ jobs:
           "CLUSTER": "dev-gcp"
           "RESOURCE": ".nais/nais.yaml"
           "VARS": ".nais/dev.yaml"
-  # "deployAppToProd":
-  #   name: "Deploy app to prod"
-  #   needs: "deployAppToDev"
-  #   runs-on: "ubuntu-latest"
-  #   steps:
-  #   - uses: "actions/checkout@v2"
-  #   - name: "Deploy to PROD"
-  #     uses: "nais/deploy/actions/deploy@v1"
-  #     env:
-  #       "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
-  #       "CLUSTER": "prod-gcp"
-  #       "RESOURCE": ".nais/nais.yaml"
-  #       "VARS": ".nais/prod.yaml"
+  "deployAppToProd":
+    name: "Deploy app to prod"
+    needs: "deployAppToDev"
+    runs-on: "ubuntu-latest"
+    steps:
+    - uses: "actions/checkout@v2"
+    - name: "Deploy to PROD"
+      uses: "nais/deploy/actions/deploy@v1"
+      env:
+        "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
+        "CLUSTER": "prod-gcp"
+        "RESOURCE": ".nais/nais.yaml"
+        "VARS": ".nais/prod.yaml"
   # "deployAlertsToDev":
   #   name: "Deploy alerts to dev"
   #   needs: "build"
