--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/node": "^17.0.8",
     "express": "^4.17.2",
+    "http-proxy-middleware": "^2.0.1",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
