Prøver å nå backend via frackend-proxy
Co-authored-by: Tanet Trimas <42898343+tanettrimas@users.noreply.github.com>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -24,6 +24,10 @@ spec:
   prometheus:
     enabled: true
     path: "/metrics"
+  accessPolicy:
+    outbound:
+      rules:
+        - application: lydia-api
   ingresses: 
   {{#each ingresses as |url|}}
     - {{url}}
