--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -21,6 +21,11 @@ spec:
     min: 1
     max: 1
     cpuThresholdPercentage: 50
+  resources:
+    limits:
+      memory: 2Gi
+    requests:
+      memory: 1Gi
   prometheus:
     enabled: true
     path: "/metrics"
