--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "nodemon server.ts",
     "start": "node build/server.js",
