Legger på tilgangskontroll for å kun la NAV ansatte få tilgang
Co-authored-by: Ulrik Antoniussen Halmøy <ulrik.antoniussen.halmoy@nav.no>
Co-authored-by: Tanet Trimas <tanet.trimas@nav.no>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -33,6 +33,16 @@ spec:
     outbound:
       rules:
         - application: lydia-api
+  azure:
+    application:
+      enabled: true
+      claims:
+        extra:
+          - "NAVident"
+      allowAllUsers: true
+    sidecar:
+      enabled: true
+      autoLogin: true
   ingresses: 
   {{#each ingresses as |url|}}
     - {{url}}
