Bruk nav.no som tenant i begge clustere
Foreløpig mangler noen i teamet tilgang til @trygdeetaten.no-adresser,
som gjør det upraktisk å debugge

Co-authored-by: Tanet Trimas <42898343+tanettrimas@users.noreply.github.com>
Co-authored-by: Christian Klem <christian.klem@gmail.com>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -35,6 +35,7 @@ spec:
         - application: lydia-api
   azure:
     application:
+      tenant: nav.no
       enabled: true
       claims:
         extra:
