--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon server.ts",
     "start": "node build/server.js",
     "build": "tsc -p .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@types/node": "^17.0.8",
@@ -17,10 +18,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0"
   }
 }
