--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,8 +42,9 @@ jobs:
       #        eslint_dir: server/
       #        eslint_extensions: js,ts
 
-      #    - name: "Run tests"
-      #      run: "yarn test"
+      - name: "Run tests"
+        working-directory: server
+        run: "yarn test"
       - name: "Login to GitHub Docker Registry"
         uses: "docker/login-action@v1"
         with:
