--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
