--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,13 +20,13 @@ jobs:
           node-version: '16'
       - name: "Install deps server"
         working-directory: server
-        run: "yarn install --immutable"
+        run: "npm ci"
       - name: "Run server tests"
         working-directory: server
-        run: "yarn test"
+        run: "npm run test"
       - name: "Install deps client"
         working-directory: client
-        run: "yarn install --immutable"
+        run: "npm ci"
       - name: "Lint client"
         uses: "wearerequired/lint-action@v1"
         with:
@@ -41,10 +41,10 @@ jobs:
       #        eslint_extensions: js,ts
       - name: "Build frontend"
         working-directory: client
-        run: "yarn build"
+        run: "npm run build"
       - name: "Build frackend"
         working-directory: server
-        run: "yarn build"
+        run: "npm run build"
       - name: "Login to GitHub Docker Registry"
         uses: "docker/login-action@v1"
         with:
