--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -52,7 +52,7 @@ jobs:
           "username": "${{ github.actor }}"
           "password": "${{ secrets.GITHUB_TOKEN }}"
       - name: "Build and push the Docker image"
-        run: "docker-compose build --pull && docker push ${IMAGE}"
+        run: "docker push ${IMAGE}"
 
   "deployAppToDev":
     name: "Deploy app to dev"
