--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "@navikt/ds-css-internal": "^0.7.1",
     "@navikt/ds-react": "^0.14.10-next.0",
     "@navikt/ds-react-internal": "^0.9.10-next.0",
-    "@vitejs/plugin-react": "^1.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "vite": "^2.7.2",
+    "@vitejs/plugin-react": "^1.0.7",
+    "typescript": "^4.4.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
