--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: "Build and deploy lydia-radgiver-frontend"
+name: Build and deploy lydia-radgiver-frontend
 on:
   push:
     branches:
@@ -7,102 +7,109 @@ on:
 #    branches:
 #      - main
 env:
-  "IMAGE": "ghcr.io/${{ github.repository }}:${{ github.sha }}"
+  IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
 jobs:
-  "build":
-    name: "Build, lint, test and push docker image"
-    runs-on: "ubuntu-latest"
+  build:
+    name: Build, lint, test and push docker image
+    runs-on: ubuntu-latest
     steps:
-      - uses: "actions/checkout@v2"
-      - name: "Setup node"
-        uses: "actions/setup-node@v2"
+      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - name: "Install deps server"
+      - name: Install deps server
         working-directory: server
-        run: "npm ci"
-      - name: "Run server tests"
+        run: npm ci
+      - name: Run server tests
         working-directory: server
-        run: "npm run test"
-      - name: "Install deps client"
+        run: npm run test
+      - name: Install deps client
         working-directory: client
-        run: "npm ci"
-      - name: "Lint client"
-        uses: "wearerequired/lint-action@v1"
+        run: npm ci
+      - name: Lint client
+        uses: wearerequired/lint-action@v1
         with:
           eslint: true
           eslint_dir: client/
           eslint_extensions: js,jsx,ts,tsx
-      #    - name: "Lint server"
-      #      uses: "wearerequired/lint-action@v1"
+      #    - name: Lint server
+      #      uses: wearerequired/lint-action@v1
       #      with:
       #        eslint: true
       #        eslint_dir: server/
       #        eslint_extensions: js,ts
-      - name: "Build frontend"
+      - name: Build frontend
         working-directory: client
-        run: "npm run build"
-      - name: "Build frackend"
+        run: npm run build
+      - name: Build frackend
         working-directory: server
-        run: "npm run build"
-      - name: "Login to GitHub Docker Registry"
-        uses: "docker/login-action@v1"
-        with:
-          "registry": "ghcr.io"
-          "username": "${{ github.actor }}"
-          "password": "${{ secrets.GITHUB_TOKEN }}"
-      - name: "Build and push the Docker image"
-        run: "docker push ${IMAGE}"
+        run: npm run build
 
-  "deployAppToDev":
-    name: "Deploy app to dev"
-    needs: "build"
-    runs-on: "ubuntu-latest"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ghcr.io/${{ github.repository }}:latest,${{IMAGE}}
+
+  deployAppToDev:
+    name: Deploy app to dev
+    needs: build
+    runs-on: ubuntu-latest
     steps:
-      - uses: "actions/checkout@v2"
-      - name: "Deploy to DEV"
-        uses: "nais/deploy/actions/deploy@v1"
+      - uses: actions/checkout@v2
+      - name: Deploy to DEV
+        uses: nais/deploy/actions/deploy@v1
         env:
-          "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
-          "CLUSTER": "dev-gcp"
-          "RESOURCE": ".nais/nais.yaml"
-          "VARS": ".nais/dev.yaml"
-#  "deployAppToProd":
-#    name: "Deploy app to prod"
-#    needs: "deployAppToDev"
-#    runs-on: "ubuntu-latest"
-#    steps:
-#    - uses: "actions/checkout@v2"
-#    - name: "Deploy to PROD"
-#      uses: "nais/deploy/actions/deploy@v1"
-#      env:
-#        "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
-#        "CLUSTER": "prod-gcp"
-#        "RESOURCE": ".nais/nais.yaml"
-#        "VARS": ".nais/prod.yaml"
-  # "deployAlertsToDev":
-  #   name: "Deploy alerts to dev"
-  #   needs: "build"
-  #   runs-on: "ubuntu-latest"
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: dev-gcp
+          RESOURCE: .nais/nais.yaml
+          VARS: .nais/dev.yaml
+  deployAppToProd:
+    name: Deploy app to prod
+    needs: deployAppToDev
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Deploy to PROD
+      uses: nais/deploy/actions/deploy@v1
+      env:
+        APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+        CLUSTER: prod-gcp
+        RESOURCE: .nais/nais.yaml
+        VARS: .nais/prod.yaml
+  # deployAlertsToDev:
+  #   name: Deploy alerts to dev
+  #   needs: build
+  #   runs-on: ubuntu-latest
   #   steps:
-  #   - uses: "actions/checkout@v2"
-  #   - name: "Deploy alerts to DEV"
-  #     uses: "nais/deploy/actions/deploy@v1"
+  #   - uses: actions/checkout@v2
+  #   - name: Deploy alerts to DEV
+  #     uses: nais/deploy/actions/deploy@v1
   #     env:
-  #       "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
-  #       "CLUSTER": "dev-gcp"
-  #       "RESOURCE": ".nais/alerts-dev.yaml"
-  #       "VARS": ".nais/dev.yaml"
-  # "deployAlertsToProd":
-  #   name: "Deploy alerts to prod"
-  #   needs: "build"
-  #   runs-on: "ubuntu-latest"
+  #       APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+  #       CLUSTER: dev-gcp
+  #       RESOURCE: .nais/alerts-dev.yaml
+  #       VARS: .nais/dev.yaml
+  # deployAlertsToProd:
+  #   name: Deploy alerts to prod
+  #   needs: build
+  #   runs-on: ubuntu-latest
   #   steps:
-  #   - uses: "actions/checkout@v2"
-  #   - name: "Deploy alerts to PROD"
-  #     uses: "nais/deploy/actions/deploy@v1"
+  #   - uses: actions/checkout@v2
+  #   - name: Deploy alerts to PROD
+  #     uses: nais/deploy/actions/deploy@v1
   #     env:
-  #       "APIKEY": "${{ secrets.NAIS_DEPLOY_APIKEY }}"
-  #       "CLUSTER": "prod-gcp"
-  #       "RESOURCE": ".nais/alerts-prod.yaml"
-  #       "VARS": ".nais/prod.yaml"
+  #       APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+  #       CLUSTER: prod-gcp
+  #       RESOURCE: .nais/alerts-prod.yaml
+  #       VARS: .nais/prod.yaml
