--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -59,7 +59,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest,${{IMAGE}}
+          tags: ghcr.io/${{ github.repository }}:latest,${{ env.IMAGE }}
 
   deployAppToDev:
     name: Deploy app to dev
