Bruk relative path
Co-authored-by: Ulrik Antoniussen Halmøy <ulrikhalmoy@gmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,6 +60,7 @@ jobs:
         with:
           push: true
           tags: ghcr.io/${{ github.repository }}:latest,${{ env.IMAGE }}
+          context: .
 
   deployAppToDev:
     name: Deploy app to dev
