--- a/server/package.json
+++ b/server/package.json
@@ -15,18 +15,19 @@
     "http-proxy-middleware": "^2.0.1"
   },
   "devDependencies": {
-    "typescript": "^4.5.4",
-    "@types/node": "^17.0.8",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
+    "nock": "^13.2.2",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
