Fiks: setter LYDIA_API_URI som miljøvariabel i Nais-oppsett fordi vi nå krever at den eksisterer

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -43,6 +43,9 @@ spec:
     sidecar:
       enabled: true
       autoLogin: true
+  env:
+  - name: LYDIA_API_URI
+    value: http://lydia-api
   ingresses: 
   {{#each ingresses as |url|}}
     - {{url}}
