--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.25.0",
     "express": "^4.17.2",
-    "http-proxy-middleware": "^2.0.1"
+    "http-proxy-middleware": "^2.0.1",
+    "winston": "^3.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
