--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
     "axios": "^0.25.0",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "winston": "^3.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
