--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.1",
+    "jose": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "winston": "^3.5.1"
   },
