--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.1",
     "jose": "^4.4.0",
