--- a/client/package.json
+++ b/client/package.json
@@ -14,17 +14,18 @@
     "@navikt/ds-react": "^0.14.10-next.0",
     "@navikt/ds-react-internal": "^0.9.10-next.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
-    "vite": "^2.7.2",
-    "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.4.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
-    "eslint-plugin-react": "^7.28.0"
+    "eslint-plugin-react": "^7.28.0",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2"
   }
 }
