--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "@navikt/ds-react-internal": "^0.9.10-next.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
