--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@navikt/ds-css": "^0.12.11-next.0",
@@ -20,13 +22,23 @@
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@storybook/addon-actions": "^6.5.0-alpha.40",
+    "@storybook/addon-essentials": "^6.5.0-alpha.40",
+    "@storybook/addon-interactions": "^6.5.0-alpha.40",
+    "@storybook/addon-links": "^6.5.0-alpha.40",
+    "@storybook/react": "^6.5.0-alpha.40",
+    "@storybook/testing-library": "^0.0.9",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-loader": "^8.2.3",
     "eslint": "^8.6.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-storybook": "^0.5.7",
+    "storybook-builder-vite": "^0.1.16",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
