--- a/client/package.json
+++ b/client/package.json
@@ -11,35 +11,35 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@navikt/ds-css": "^0.12.11-next.0",
-    "@navikt/ds-css-internal": "^0.7.1",
-    "@navikt/ds-react": "^0.14.10-next.0",
-    "@navikt/ds-react-internal": "^0.9.10-next.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-select": "^5.2.2",
-    "swr": "^1.2.1",
-    "zod": "^3.11.6"
+    "@navikt/ds-css": "0.12.11-next.0",
+    "@navikt/ds-css-internal": "0.7.1",
+    "@navikt/ds-react": "0.14.10-next.0",
+    "@navikt/ds-react-internal": "0.9.10-next.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-select": "5.2.2",
+    "swr": "1.2.1",
+    "zod": "3.11.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@storybook/addon-actions": "^6.5.0-alpha.40",
-    "@storybook/addon-essentials": "^6.5.0-alpha.40",
-    "@storybook/addon-interactions": "^6.5.0-alpha.40",
-    "@storybook/addon-links": "^6.5.0-alpha.40",
-    "@storybook/react": "^6.5.0-alpha.40",
-    "@storybook/testing-library": "^0.0.9",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "@vitejs/plugin-react": "^1.0.7",
-    "babel-loader": "^8.2.3",
-    "eslint": "^8.6.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-storybook": "^0.5.7",
-    "storybook-builder-vite": "^0.1.16",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "@babel/core": "7.17.5",
+    "@storybook/addon-actions": "6.5.0-alpha.40",
+    "@storybook/addon-essentials": "6.5.0-alpha.40",
+    "@storybook/addon-interactions": "6.5.0-alpha.40",
+    "@storybook/addon-links": "6.5.0-alpha.40",
+    "@storybook/react": "6.5.0-alpha.40",
+    "@storybook/testing-library": "0.0.9",
+    "@types/react": "17.0.33",
+    "@types/react-dom": "17.0.10",
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
+    "@vitejs/plugin-react": "1.0.7",
+    "babel-loader": "8.2.3",
+    "eslint": "8.6.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-storybook": "0.5.7",
+    "storybook-builder-vite": "0.1.16",
+    "typescript": "4.4.4",
+    "vite": "2.7.2"
   }
 }
