--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-select": "5.2.2",
+    "styled-components": "5.3.3",
     "swr": "1.2.1",
     "zod": "3.11.6"
   },
@@ -31,6 +32,7 @@
     "@storybook/testing-library": "0.0.9",
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
+    "@types/styled-components": "5.1.24",
     "@typescript-eslint/eslint-plugin": "5.9.1",
     "@typescript-eslint/parser": "5.9.1",
     "@vitejs/plugin-react": "1.0.7",
