--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,6 +42,9 @@ jobs:
       - name: Build frontend
         working-directory: client
         run: npm run build
+      - name: Build storybook
+        working-directory: client
+        run: npm run build-storybook
       - name: Build frackend
         working-directory: server
         run: npm run build
