--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "0.25.0",
+    "connect-redis": "6.1.3",
     "dotenv": "16.0.0",
     "express": "4.17.2",
+    "express-session": "1.17.2",
     "http-proxy-middleware": "2.0.1",
     "jose": "4.5.0",
+    "redis": "4.0.4",
     "winston": "3.5.1"
   },
   "devDependencies": {
