--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "winston": "3.5.1"
   },
   "devDependencies": {
+    "@types/connect-redis": "0.0.18",
     "@types/express": "4.17.13",
+    "@types/express-session": "1.17.4",
     "@types/jest": "27.4.0",
     "@types/node": "17.0.8",
     "@types/supertest": "2.0.11",
