Legger til redis-relaterte nøkler fra Google Secret Manager
Co-authored-by: Tanet Trimas <42898343+tanettrimas@users.noreply.github.com>
Co-authored-by: Christian Klem <christian.klem@gmail.com>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -49,6 +49,8 @@ spec:
       value: http://lydia-api
     - name: REDIS_HOST
       value: fia-radgiver-frontend-redis.pia.svc.cluster.local
+  envFrom:
+    - secret: fia-redis
   ingresses:
   {{#each ingresses as |url|}}
      - {{url } }
