--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
-  "extends": "./tsconfig.json",
-  "exclude": [
-    "node_modules",
-    "__tests__"
-  ]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "skipLibCheck": true
+    },
+    "exclude": ["node_modules", "__tests__"]
 }
