--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -49,6 +49,8 @@ spec:
       value: http://lydia-api
     - name: REDIS_HOST
       value: fia-radgiver-frontend-redis.pia.svc.cluster.local
+    - name: REDIS_PORT
+      value: "6739"
   envFrom:
     - secret: fia-redis
   ingresses:
