--- a/client/package.json
+++ b/client/package.json
@@ -11,16 +11,16 @@
     "build-storybook": "BASE_URL=/storybook-static/ build-storybook"
   },
   "dependencies": {
-    "@navikt/ds-css": "0.12.11-next.0",
+    "@navikt/ds-css": "0.15.12",
     "@navikt/ds-css-internal": "0.7.1",
-    "@navikt/ds-react": "0.14.10-next.0",
-    "@navikt/ds-react-internal": "0.9.10-next.0",
+    "@navikt/ds-react": "0.16.20",
+    "@navikt/ds-react-internal": "0.11.20",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-select": "5.2.2",
     "styled-components": "5.3.3",
-    "swr": "1.2.1",
-    "zod": "3.11.6"
+    "swr": "1.2.2",
+    "zod": "3.13.4"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
