--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,9 @@
     "express": "4.17.3",
     "express-session": "1.17.2",
     "http-proxy-middleware": "2.0.3",
+    "ioredis": "5.0.1",
     "jose": "4.5.1",
     "prom-client": "14.0.1",
-    "redis": "4.0.4",
     "winston": "3.6.0"
   },
   "devDependencies": {
