--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "express-session": "1.17.2",
     "http-proxy-middleware": "2.0.3",
     "jose": "4.5.1",
-    "prom-client": "14.0.1",
+    "prometheus-api-metrics": "3.2.1",
     "redis": "4.0.4",
     "winston": "3.6.0"
   },
