--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
     "http-proxy-middleware": "2.0.3",
     "ioredis": "5.0.1",
     "jose": "4.5.1",
-    "prom-client": "14.0.1",
+    "prometheus-api-metrics": "3.2.1",
     "winston": "3.6.0"
   },
   "devDependencies": {
