--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "jest": "27.4.7",
     "nock": "13.2.2",
     "nodemon": "2.0.15",
+    "prom-client": "13.2.0",
     "supertest": "6.2.2",
     "ts-jest": "27.1.3",
     "ts-node": "10.4.0",
