--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,11 +1,12 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "lib": ["ES2020"],
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "target": "ES2020",
-    "outDir": "build",
-    "esModuleInterop": true
-  }
+    "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "lib": ["ES2020"],
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "target": "ES2020",
+        "outDir": "build",
+        "esModuleInterop": true,
+        "typeRoots": ["./types", "./node_modules/@types"]
+    }
 }
