--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@navikt/ds-react-internal": "0.11.20",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router-dom": "6.2.2",
     "react-select": "5.2.2",
     "styled-components": "5.3.3",
     "swr": "1.2.2",
