--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
+    "lint": "eslint src/",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "BASE_URL=/storybook-static/ build-storybook"
   },
