Legger til client-tester som en del av byggesteget
Legger også til en banal test for å se at ting virker som det skal"

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Install deps client
         working-directory: client
         run: npm ci
+      - name: Run client tests
+        working-directory: client
+        run: npm run test
       - name: Lint client
         uses: wearerequired/lint-action@v1
         with:
