Man må ha riktig rolle for å få lov til å laste inn Fia
Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Stefan Andreas Engelien <stefan.andreas.engelien@nav.no>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -37,10 +37,14 @@ spec:
   azure:
     application:
       enabled: true
+      allowAllUsers: false
       claims:
+        groups:
+          - id: {{fiaSuperbrukerGroup}}
+          - id: {{fiaSaksbehandlerGroup}}
+          - id: {{fiaLesetilgangGroup}}
         extra:
           - "NAVident"
-      allowAllUsers: true
     sidecar:
       enabled: true
       autoLogin: true
