Fix: prøver å kjøre Storybook som en bakgrunnsprosess for å komme oss til neste byggsteg
Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Stefan A. Engelien <stefan.andreas.engelien@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ jobs:
           run: npm install
         - name: Start Storybook server
           working-directory: client
-          run: npm run storybook
+          run: npm run storybook &
         - name: Cypress run
           uses: cypress-io/github-action@v4
           with:
