Fix: forsøk 4 for å få Cypress til å kjøre
Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Stefan A. Engelien <stefan.andreas.engelien@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
         - name: Cypress run
           uses: cypress-io/github-action@v4
           with:
-            project: ./e2e
+            working-directory: e2e
             wait-on: 'http://localhost:6006'
     build:
         name: Build, lint, test and push docker image
