Fix: peker Cypress mot URL-en til Storybook
Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Stefan A. Engelien <stefan.andreas.engelien@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,8 @@ jobs:
           run: npm run storybook &
         - name: Cypress run
           uses: cypress-io/github-action@v4
+          env:
+            CYPRESS_BASE_URL: http://localhost:6006/
           with:
             working-directory: e2e
             wait-on: 'http://localhost:6006'
