Tester at 'Ikke aktuell' knappen vises for saker i status 'Vi bistår' og 'Kartlegges'
- tar også i bruk cypress-testing-library

Co-authored-by: Ulrik Antoniussen Halmøy <ulrik.antoniussen.halmoy@nav.no>
Co-authored-by: Stefan Andreas Engelien <stefan.andreas.engelien@nav.no>

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,7 +5,8 @@
     "start": "cypress run"
   },
   "devDependencies": {
-    "typescript": "4.7.4",
-    "cypress": "^10.4.0"
+    "@testing-library/cypress": "^8.0.3",
+    "cypress": "^10.6.0",
+    "typescript": "4.7.4"
   }
 }
