Sett opp docker-compose oppsett for lokalt utviklingsmiljø
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -4,9 +4,7 @@ WORKDIR /home/node/app
 COPY package.json .
 RUN npm install
 
-COPY types ./types
-COPY *.ts .
-COPY *.json .
+COPY . .
 
 EXPOSE 3000
 
