--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,10 +1,9 @@
 FROM node:16-alpine
 
 WORKDIR /home/node/app
-COPY . .
+COPY package.json .
 RUN npm install
-
+COPY . .
 
 EXPOSE 5173
-
 CMD ["npm", "run", "dev"]
