--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,6 @@ services:
       POSTGRES_PASSWORD: test
     ports:
       - 5432:5432
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
 
   authserver:
     image: ghcr.io/navikt/mock-oauth2-server:0.5.1
@@ -119,13 +117,13 @@ services:
       NAIS_CLUSTER_NAME: "lokal"
       # Spesifikk for remote debugging
       JAVA_TOOL_OPTIONS: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
+
   redis:
     image: redis:7-alpine
     restart: always
     ports:
       - 6379:6379
-    volumes:
-      - redis-cache:/data
+
   wonderwall:
     image: ghcr.io/nais/wonderwall:latest
     depends_on:
@@ -165,6 +163,9 @@ services:
       AZURE_APP_CLIENT_SECRET: secret
       AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:6969/azure
       AZURE_OPENID_CONFIG_TOKEN_ENDPOINT: http://host.docker.internal:6969/azure/token
+    volumes:
+      - ./server:/home/node/app
+      - /home/node/app/node_modules
 
   frontend:
     build:
@@ -172,8 +173,6 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - 5173:5173
-
-
-volumes:
-  postgres-data:
-  redis-cache:
+    volumes:
+      - ./client:/home/node/app
+      - /home/node/app/node_modules
