--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,7 +1,7 @@
-FROM node:16-alpine
+FROM node:lts-alpine
 
 WORKDIR /home/node/app
-COPY package.json .
+COPY package*.json .
 RUN npm install
 COPY . .
 
