Fiksar oppsett for å køyre lokalt
Før dette kunne vi ikkje kalle mock av azure, så vi fekk ikkje henta ut rådgjevarar til filterverdier.

Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,21 @@
 services:
+  authserver:
+    image: ghcr.io/navikt/mock-oauth2-server:0.5.5
+    environment:
+      TZ: Europe/Oslo
+      SERVER_PORT: 6969
+      JSON_CONFIG: "{\"interactiveLogin\":true,\"tokenCallbacks\":[{\"issuerId\":\"azure\",\"tokenExpiry\":3600,\"requestMappings\":[{\"requestParam\":\"grant_type\",\"claims\":{\"aud\":[\"lydia-api\"],\"NAVident\":\"Z123456\",\"preferred_username\":\"test.testesen@nav.no\",\"name\":\"Test Testesen\",\"groups\":[\"ensuperbrukerGroupId\"]}}]}]}"
+    ports:
+      - 6969:6969
+
+  azure:
+    container_name: azure
+    image: wiremock/wiremock
+    ports:
+      - "9090:8080"
+    volumes:
+      - ./stubs:/home/wiremock
+
   postgres:
     image: postgres:14
 #    build:
@@ -10,15 +27,6 @@ services:
       - 5432:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
-
-  authserver:
-    image: ghcr.io/navikt/mock-oauth2-server:0.5.5
-    environment:
-      TZ: Europe/Oslo
-      SERVER_PORT: 6969
-      JSON_CONFIG: "{\"interactiveLogin\":true,\"tokenCallbacks\":[{\"issuerId\":\"azure\",\"tokenExpiry\":3600,\"requestMappings\":[{\"requestParam\":\"grant_type\",\"claims\":{\"aud\":[\"lydia-api\"],\"NAVident\":\"Z123456\",\"preferred_username\":\"test.testesen@nav.no\",\"name\":\"Test Testesen\",\"groups\":[\"ensuperbrukerGroupId\"]}}]}]}"
-    ports:
-      - 6969:6969
 
   zookeeper:
     container_name: zookeeper
@@ -100,6 +108,7 @@ services:
         }
       AZURE_OPENID_CONFIG_ISSUER: http://host.docker.internal:6969/azure
       AZURE_OPENID_CONFIG_JWKS_URI: http://host.docker.internal:6969/azure/jwks
+      AZURE_GRAPH_URL: http://host.docker.internal:9090/v1.0
       FIA_SUPERBRUKER_GROUP_ID: ensuperbrukerGroupId
       FIA_SAKSBEHANDLER_GROUP_ID: ensaksbehandlerGroupId
       FIA_LESETILGANG_GROUP_ID: enlesetilgangGroupId
