Tar i bruk jsx-a11y for UU-linting
Inkluderer dette som et steg i bygget vårt for å stoppe eventuell feil før de går i prod

Co-authored-by: Ingrid Fosså <ingrid.fossa@nav.no>

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "test": "jest",
-    "prebuild": "tsc",
+    "prebuild": "npm run lint && tsc",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint src/",
@@ -47,6 +47,7 @@
     "@vitejs/plugin-react": "2.0.0",
     "babel-loader": "8.2.5",
     "eslint": "8.20.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-storybook": "0.6.1",
     "gh-pages": "4.0.0",
