Fiks lokalt docker-compose-oppsett

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -120,6 +120,7 @@ services:
       KAFKA_CREDSTORE_PASSWORD: ""
       STATISTIKK_TOPIC: arbeidsgiver.sykefravarsstatistikk-v1
       STATISTIKK_LAND_TOPIC: arbeidsgiver.sykefravarsstatistikk-land-v1
+      STATISTIKK_VIRKSOMHET_TOPIC: arbeidsgiver.sykefravarsstatistikk-virksomhet-v1
       IA_SAK_HENDELSE_TOPIC: pia.ia-sak-hendelse-v1
       IA_SAK_TOPIC: pia.ia-sak-v1
       BRREG_OPPDATERING_TOPIC: pia.brreg-oppdatering
