Fikser Docker Compose healthchecks
Fjerner fra backend da vi bruker distroless image

Endrer Zookeeper healthcheck til noe som funker

Co-authored-by: Ingrid Fosså <ingrid.fossa@nav.no>
Co-authored-by: Christian Klem <christian.klem@nav.no>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_LOG4J_ROOT_LOGLEVEL: ERROR
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://zookeeper:2181" ]
+      test: nc -z localhost 2181  || exit -1
       interval: 30s
       timeout: 10s
       retries: 5
@@ -77,11 +77,6 @@ services:
     ports:
       - 8080:8080
       - 5005:5005
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://backend:8080/internal/isready" ]
-      interval: 30s
-      timeout: 10s
-      retries: 5
     environment:
       # Postgres env
       NAIS_DATABASE_LYDIA_API_LYDIA_API_DB_HOST: postgres
