Installerer @navikt/ds-icons
slik at søppelbøtteknapp kan fungere.

Oppdaterer også resten av navikt-avhengigheitene til nyaste versjon

--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,11 @@
     "prepare": "cd .. && husky install client/.husky"
   },
   "dependencies": {
-    "@navikt/ds-css": "2.1.6",
-    "@navikt/ds-css-internal": "2.1.6",
-    "@navikt/ds-react": "2.1.6",
-    "@navikt/ds-react-internal": "2.1.6",
+    "@navikt/ds-css": "2.1.7",
+    "@navikt/ds-css-internal": "2.1.7",
+    "@navikt/ds-icons": "2.1.7",
+    "@navikt/ds-react": "2.1.7",
+    "@navikt/ds-react-internal": "2.1.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.6.1",
