Spesifisere ingress til lydia-api i access-policy etter endringer i NAIS egress-policy i dev-gcp

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -30,6 +30,8 @@ spec:
       rules:
         - application: lydia-api
         - application: fia-radgiver-frontend-redis
+      external:
+        - host: {{lydia-api.ingress}}
   azure:
     application:
       enabled: true
