--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -3,3 +3,5 @@ ingresses:
 fiaSuperbrukerGroup: f71a0eed-1e59-4b19-ae13-6c1af824fe8e
 fiaSaksbehandlerGroup: a72547f2-c92b-420c-b7b0-fc227337e9ea
 fiaLesetilgangGroup: 790acd42-dc41-46ce-b7e7-cee414b4b4bc
+lydia-api:
+  ingress: lydia-api.intern.nav.no
